feat:左右滑动块阻止浏览器的默认左右滑上下页功能

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,18 @@ main {
   padding: 30px;
 }
 
+.xscroll-box {
+  display: flex;
+  width: 100%;
+  overflow-x: scroll;
+}
+.xscroll-box > li {
+  width: 200px;
+  height: 100px;
+  background-color: yellowgreen;
+  margin-right: 10px;
+}
+
 @keyframes fly-coin {
   from {
     top: 50vh;
